// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberFieldRenderer snapshot (T-0006-089) — productive×focus matches snapshot at productive×focus 1`] = `
<View>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#5C6470",
        "fontSize": 13,
        "fontWeight": "400",
        "letterSpacing": 0.1,
        "lineHeight": 18,
        "marginBottom": 4,
      }
    }
  >
    Weight (kg)
  </Text>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#ECEEF1",
        "borderRadius": 12,
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <TextInput
      accessibilityLabel="Weight (kg)"
      accessibilityRole="adjustable"
      accessibilityValue={
        {
          "text": "75",
        }
      }
      keyboardType="numeric"
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#A2A8B2"
      style={
        {
          "color": "#14171A",
          "fontSize": 16,
          "lineHeight": 24,
          "padding": 0,
        }
      }
      value="75"
    />
  </View>
</View>
`;

exports[`NumberFieldRenderer snapshot (T-0006-090) — expressive×health matches snapshot at expressive×health 1`] = `
<View>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#6B5F56",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 20,
        "marginBottom": 4,
      }
    }
  >
    Weight (kg)
  </Text>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EFE9DF",
        "borderRadius": 12,
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <TextInput
      accessibilityLabel="Weight (kg)"
      accessibilityRole="adjustable"
      accessibilityValue={
        {
          "text": "75",
        }
      }
      keyboardType="numeric"
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#B0A89E"
      style={
        {
          "color": "#1A1715",
          "fontSize": 16,
          "lineHeight": 26,
          "padding": 0,
        }
      }
      value="75"
    />
  </View>
</View>
`;
